--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "custom-cra-template",
   "version": "0.1.0",
   "private": true,
-   "dependencies": {
-    "@craco/craco": "^6.4.3",
+  "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -11,6 +10,7 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "eslint": "^8.17.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.1.0",
@@ -18,19 +18,19 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.7.3"
   },
-   "devDependencies": {},
+  "devDependencies": {},
   "scripts": {
     "start": "craco start",
     "build": "craco build",
     "test": "craco test"
   },
-   "browserslist": {
+  "browserslist": {
     "production": [
       ">0.2%",
       "not dead",
       "not op_mini all"
     ],
-      "development": [
+    "development": [
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
