--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
     "eslint": "^8.17.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-config-airbnb-typescript": "^17.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
     "typescript": "^4.7.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint-config-airbnb": "18.2.1",
+    "eslint-config-airbnb-typescript": "^17.0.0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
