--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
+    "@types/styled-components": "^5.1.25",
+    "styled-components": "^5.3.5",
+    "styled-normalize": "^8.0.7",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
