--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "custom-cra-template",
+  "name": "custom-cra-express-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,11 +7,12 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
+    "@types/styled-components": "^5.1.25",
     "eslint": "^8.17.0",
+    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
-    "@types/styled-components": "^5.1.25",
     "styled-components": "^5.3.5",
     "styled-normalize": "^8.0.7",
     "typescript": "^4.7.3"
@@ -20,8 +21,9 @@
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^17.0.0"
   },
+  "proxy": "http://localhost:3021/",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=3020 react-scripts start",
     "build": "react-scripts build"
   },
   "browserslist": {
