--- a/package.json
+++ b/package.json
@@ -7,14 +7,11 @@
     "@types/node": "^16.11.39",
     "@types/react": "^18.0.12",
     "@types/react-dom": "^18.0.5",
-    "@types/styled-components": "^5.1.25",
+    "dotenv": "^16.0.1",
     "eslint": "^8.17.0",
-    "nodemon": "^2.0.16",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "^5.0.1",
-    "styled-components": "^5.3.5",
-    "styled-normalize": "^8.0.7",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
