--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "eslint": "^8.17.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "^5.0.1",
+    "redux": "^4.2.0",
     "typescript": "^4.7.3"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
-    "eslint-config-airbnb-typescript": "^17.0.0"
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "redux-devtools-extension": "^2.13.9"
   },
   "scripts": {
     "start": "TSC_COMPILE_ON_ERROR=true react-scripts start",
