--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "typescript": "^4.7.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^17.0.0",
-    "redux-devtools-extension": "^2.13.9"
+    "postcss": "^8.4.20",
+    "redux-devtools-extension": "^2.13.9",
+    "tailwindcss": "^3.2.4"
   },
   "scripts": {
     "start": "TSC_COMPILE_ON_ERROR=true react-scripts start",
